[B][COLOR gold]v3.2.8[/COLOR][/B]
- Added option to enable/disable Trakt episodes ratings
    [I]Context:[/I]  TheTVDb stopped supporting ratings some time ago, so we resorted to Trakt
    for episodes ratings. But this takes an extra call to Trakt, which slows down the episodes
    list fetching. Now there's an option to turn this on/off - until a better solution is found.
- Made Channels main menu item optional

[B][COLOR gold]v3.2.7[/COLOR][/B]
- TV Networks now list all shows of given network, instead of current season's shows
- Added some threading here and there

[B][COLOR gold]v3.2.6[/COLOR][/B]
- Added a couple web channels on Networks
- Minor kodi 19 adjustments

[B][COLOR gold]v3.2.5[/COLOR][/B]
- Moved scraper accounts settings (ororo, filepursuit) into Oathscrapers's settings
- Quality identification fixes

[B][COLOR gold]v3.2.4[/COLOR][/B]
- Added Debrid-Link.fr to the supported torrents cache check services
- Further simplification of the sources fetching proccess/dialog
- Fixed busy dialog issue when backgroung progress dialog is selected

[B][COLOR gold]v3.2.3[/COLOR][/B]
- Fix torrent cache check not terminating if a debrid service is down
- Minor settings bug fix

[B][COLOR gold]v3.2.2[/COLOR][/B]
- Various under the hood changes

[B][COLOR gold]v3.2.1[/COLOR][/B]
- Fixed Trakt (re)auth when Kodi's ui language is other than English
- Other minor code tweaks

[B][COLOR gold]v3.2.0[/COLOR][/B]
- Added min quality setting
- Added option to remove uncached torrents from the source list
    They will still be listed if none cached found
- Simplified the sources fetching dialog
    The old implementation was sometimes freezing the dialog and/or the scraping process

[B][COLOR gold]v3.1.3[/COLOR][/B]
- Added support for some more debrid hosts
- Minor fixes

[B][COLOR gold]v3.1.2[/COLOR][/B]
- Code cleanup

[B][COLOR gold]v3.1.1[/COLOR][/B]
- Fixed Library integration and Downloads for Kodi 19

[B][COLOR gold]v3.1.0[/COLOR][/B]