@@ -53,6 +53,10 @@ def get_title(title):
 
 def geturl(title):
     if title is None: return
+    try:
+        title = ensure_str(title)
+    except:
+        pass
     title = title.lower()
     title = title.rstrip()
     try: title = title.translate(None, ':*?"\'\.<>|&!,')
@@ -67,6 +71,10 @@ def geturl(title):
 
 def get_url(title):
     if title is None: return
+    try:
+        title = ensure_str(title)
+    except:
+        pass
     title = title.replace(' ', '%20').replace('–', '-').replace('!', '')
     return title
 
@@ -83,12 +91,20 @@ def get_gan_url(title):
 
 def get_query_(title):
     if title is None: return
+    try:
+        title = ensure_str(title)
+    except:
+        pass
     title = title.replace(' ', '_').replace(':', '').replace('.-.', '.').replace('\'', '').replace(",", '').replace("'", '').replace('–', '-').replace('!', '')
     return title
 
 
 def get_simple(title):
     if title is None: return
+    try:
+        title = ensure_str(title)
+    except:
+        pass
     title = title.lower()
     title = re.sub('(\d{4})', '', title)
     title = re.sub('&#(\d+);', '', title)
@@ -100,6 +116,10 @@ def get_simple(title):
 
 def getsearch(title):
     if title is None: return
+    try:
+        title = ensure_str(title)
+    except:
+        pass
     title = title.lower()
     title = re.sub('&#(\d+);', '', title)
     title = re.sub('(&#[0-9]+)([^;^0-9]+)', '\\1;\\2', title)
@@ -110,21 +130,28 @@ def getsearch(title):
 
 def query(title):
     if title is None: return
+    try:
+        title = ensure_str(title)
+    except:
+        pass
     title = title.replace('\'', '').rsplit(':', 1)[0].rsplit(' -', 1)[0].replace('-', ' ').replace('–', ' ').replace('!', '')
     return title
 
 
 def get_query(title):
     if title is None: return
+    try:
+        title = ensure_str(title)
+    except:
+        pass
     title = title.replace(' ', '.').replace(':', '').replace('.-.', '.').replace('\'', '').replace('–', '.').replace('!', '')
     return title
 
 
 def normalize(title):
     try:
-        try: return ensure_text(control.six_decode(title, char='ascii'))
-        except: pass
-        return str(''.join(c for c in unicodedata.normalize('NFKD', ensure_text(control.six_decode(title))) if unicodedata.category(c) != 'Mn'))
+        try: return ensure_str(ensure_text(title, encoding='ascii'))
+        except: return str(''.join(c for c in unicodedata.normalize('NFKD', ensure_text(control.six_decode(title))) if unicodedata.category(c) != 'Mn'))
     except:
         return title
 
